--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "client": "npm start --prefix client",
     "watch": "npm run server & npm start",
     "test": "npm run test --prefix server && npm run test --prefix client",
-     "deploy":"npm run build --prefix client && npm start --prefix server"
-  },
+     "deploy":"npm run build --prefix client && npm start --prefix server",
+     "deploy-cluster":"npm run build --prefix client && npm run cluster --prefix server"
+    },
   "author": "",
   "license": "ISC"
   
