--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
     "watch": "nodemon src/server.js",
-    "cluster":"pm2 start src/server.js -i max"
+    "cluster": "pm2 start src/server.js -i max"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "csv-parse": "^5.5.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.3.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "pm2": "^5.3.1"
